--- a/server-1/package.json
+++ b/server-1/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "app1",
+  "name": "server-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.7.1",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.1",
-    "nodemon": "^2.0.7"
+    "socket.io": "^4.0.0"
   }
 }
