--- a/server-2/Dockerfile
+++ b/server-2/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /usr/src/app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./   
+COPY package*.json ./
 
 # dev mode
 RUN npm install -g nodemon 
@@ -18,7 +18,9 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-
 EXPOSE 5002
 
-CMD [ "npm", "start" ]
+# Get wait for container script
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.8.0/wait /wait
+
+RUN chmod +x /wait
